@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.42 2005/09/02 04:15:42 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.43 2005/09/19 04:26:09 greg Exp $
 #
 # Radiance makefile for utility programs
 #
@@ -123,7 +123,7 @@ glareval.o xglaresrc.o:	../common/resolu.h
 
 rad.o ranimate.o:	../common/vars.h
 
-ranimove1.o ranimove2.o:	../common/random.h
+ranimove1.o ranimove2.o vwrays.o:	../common/random.h
 
 rad.o:	../common/paths.h
 
